@@ -368,6 +368,7 @@ PHP if you have not done so prior to upgrading MediaWiki.
 * (bug 27179) API: List of extension tags through meta=siteinfo
 * Get a list of function hooks through meta=siteinfo
 * Get a list of all subscribed hooks, and those subscribers
+* (bug 28225) Allow hiding of user groups in list=allusers
 
 === Languages updated in 1.18 ===
 
